million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16124,6 +16124,34 @@
                 </a>
             </div>
         </div>
+        <div class="parent" similarity="0.171875" idol_id="2" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1708/">
+                    <img src="img/gree_1708_nf.jpg">
+                    <p>魅惑?のﾀﾞﾝｽ 如月千早</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2110">
+                    <img src="img/td_2110_0_nf.jpg">
+                    <p>エキゾチック・ブルー　如月千早 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.140625" idol_id="2" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1709/">
+                    <img src="img/gree_1709_nf.jpg">
+                    <p>ｴｷｿﾞﾁｯｸ･ﾌﾞﾙ- 如月千早</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2110">
+                    <img src="img/td_2110_1_nf.jpg">
+                    <p>エキゾチック・ブルー　如月千早 (特訓後)</p>
+                </a>
+            </div>
+        </div>
         <div class="parent" similarity="0.0078125" idol_id="42" >
             <div class="sub">
                 <a href="http://mill.tokyo/vi/card2038/">
