million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16207,4 +16207,18 @@
                     <p>スイートキャンディステージ　横山奈緒 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="46" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2066/">
+                    <img src="img/gree_2066_nf.jpg">
+                    <p>儚き雪女ﾗｲﾌﾞ 百瀬莉緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2123">
+                    <img src="img/td_2123_0_nf.jpg">
+                    <p>2人きりの忘年会　百瀬莉緒 (特訓前)</p>
+                </a>
+            </div>
         </div></body></html>
