million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16221,4 +16221,18 @@
                     <p>2人きりの忘年会　百瀬莉緒 (特訓前)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="46" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2745/">
+                    <img src="img/gree_2745_nf.jpg">
+                    <p>2人きりの忘年会 百瀬莉緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2123">
+                    <img src="img/td_2123_1_nf.jpg">
+                    <p>2人きりの忘年会　百瀬莉緒 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
