million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16235,4 +16235,88 @@
                     <p>2人きりの忘年会　百瀬莉緒 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="19" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card810/">
+                    <img src="img/gree_810_nf.jpg">
+                    <p>聖夜のﾃﾞｨﾅ- 佐竹美奈子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2141">
+                    <img src="img/td_2141_0_nf.jpg">
+                    <p>祝福のステージ　佐竹美奈子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="19" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card811/">
+                    <img src="img/gree_811_nf.jpg">
+                    <p>祝福のｽﾃ-ｼﾞ 佐竹美奈子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2141">
+                    <img src="img/td_2141_1_nf.jpg">
+                    <p>祝福のステージ　佐竹美奈子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="38" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1563/">
+                    <img src="img/gree_1563_nf.jpg">
+                    <p>清く､美しく 二階堂千鶴</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2142">
+                    <img src="img/td_2142_0_nf.jpg">
+                    <p>ヒーリングスノーマジック　二階堂千鶴 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="38" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2737/">
+                    <img src="img/gree_2737_nf.jpg">
+                    <p>ﾋ-ﾘﾝｸﾞｽﾉ-ﾏｼﾞｯｸ 二階堂千鶴</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2142">
+                    <img src="img/td_2142_1_nf.jpg">
+                    <p>ヒーリングスノーマジック　二階堂千鶴 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1640625" idol_id="12" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card827/">
+                    <img src="img/gree_827_nf.jpg">
+                    <p>悪だくみﾄﾅｶｲさん 双海真美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2143">
+                    <img src="img/td_2143_0_nf.jpg">
+                    <p>やんちゃな逃亡者　双海真美 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1328125" idol_id="12" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1550/">
+                    <img src="img/gree_1550_nf.jpg">
+                    <p>やんちゃな逃亡者 双海真美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2143">
+                    <img src="img/td_2143_1_nf.jpg">
+                    <p>やんちゃな逃亡者　双海真美 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
