+data source citation

--- a/million/act4bingo/index.html
+++ b/million/act4bingo/index.html
@@ -12,7 +12,9 @@
 <body>
     <!-- Add a text area for producer name -->
     <div class="producer-input">
-        <label>テンプレートの元の著者: <a href="https://twitter.com/bata831/status/1753419258179244306">@bata831</a></label>
+        <label>テンプレートの元の著者: <a href="https://twitter.com/bata831/status/1753419258179244306">@bata831</a>
+            <br />
+            披露ｲﾍﾞﾃﾞｰﾀｿｰｽ: <a href="https://music765plus.com/%E3%83%A1%E3%82%A4%E3%83%B3%E3%83%9A%E3%83%BC%E3%82%B8">music765plus</a></label>
         <input type="text" id="producer" name="producer" rows="1" placeholder="P名を入力してください"></input>
     </div>
 
