million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16515,4 +16515,88 @@
                     <p>マーブルステージ　双海亜美 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="18" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1525/">
+                    <img src="img/gree_1525_nf.jpg">
+                    <p>DIVE TO YOU! 島原ｴﾚﾅ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2199">
+                    <img src="img/td_2199_0_nf.jpg">
+                    <p>照れ隠しの瞳　島原エレナ (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="18" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1526/">
+                    <img src="img/gree_1526_nf.jpg">
+                    <p>照れ隠しの瞳 島原ｴﾚﾅ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2199">
+                    <img src="img/td_2199_1_nf.jpg">
+                    <p>照れ隠しの瞳　島原エレナ (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="44" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2702/">
+                    <img src="img/gree_2702_nf.jpg">
+                    <p>ｽｲ-ﾂﾜﾝﾀﾞ-ﾗﾝﾄﾞ 真壁瑞希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2200">
+                    <img src="img/td_2200_0_nf.jpg">
+                    <p>船上のジンクス　真壁瑞希 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="44" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2703/">
+                    <img src="img/gree_2703_nf.jpg">
+                    <p>船上のｼﾞﾝｸｽ 真壁瑞希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2200">
+                    <img src="img/td_2200_1_nf.jpg">
+                    <p>船上のジンクス　真壁瑞希 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1484375" idol_id="4" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card937/">
+                    <img src="img/gree_937_nf.jpg">
+                    <p>こだわりの素材 萩原雪歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2201">
+                    <img src="img/td_2201_0_nf.jpg">
+                    <p>スイートレディのカフェタイム　萩原雪歩 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.125" idol_id="4" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2693/">
+                    <img src="img/gree_2693_nf.jpg">
+                    <p>ｽｲ-ﾄﾚﾃﾞｨのｶﾌｪﾀｲﾑ 萩原雪歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2201">
+                    <img src="img/td_2201_1_nf.jpg">
+                    <p>スイートレディのカフェタイム　萩原雪歩 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
