--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6121,4 +6121,28 @@ body, div, a {
                     <img src="img/td_2186 002chi0424_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2195">
+                    <img src="img/td_2195 035hin0444_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2195">
+                    <img src="img/td_2195 035hin0444_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2196">
+                    <img src="img/td_2196 037nao0434_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2196">
+                    <img src="img/td_2196 037nao0434_1.jpg">
+                </a>
+            </div>
         </div></body></html>
