million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16599,4 +16599,32 @@
                     <p>スイートレディのカフェタイム　萩原雪歩 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="37" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2139/">
+                    <img src="img/gree_2139_nf.jpg">
+                    <p>ｺﾐｭﾆｹ-ｼｮﾝ失敗? 横山奈緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2229">
+                    <img src="img/td_2229_0_nf.jpg">
+                    <p>通じ合う心　横山奈緒 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="37" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2140/">
+                    <img src="img/gree_2140_nf.jpg">
+                    <p>通じ合う心 横山奈緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2229">
+                    <img src="img/td_2229_1_nf.jpg">
+                    <p>通じ合う心　横山奈緒 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
